@@ -69,7 +69,10 @@ class Rules extends BaseActiveModule
 	function make_rules()
 	{
 		$content = "<font color=CCInfoHeadline> :::: RULES ::::</font>\n\n";
-		$content .= implode("", file("./txt/rules.txt"));
+		if(file_exists("./txt/".$this -> bot -> botname."_rules.txt"))
+			$content .= implode("", file("./txt/".$this -> bot -> botname."_rules.txt"));
+		elseif(file_exists("./txt/rules.txt"))
+			$content .= implode("", file("./txt/rules.txt"));
 
 		return "<botname>'s Rules :: " . $this -> bot -> core("tools") -> make_blob("click to view", $content);
 	}
